--- a/client/edit.html
+++ b/client/edit.html
@@ -58,7 +58,7 @@
 
 	<div class="container_12">
 		<div class="grid_12">
-
+			<p style="display: none;" id="error"></p>
 			<div class="module">
 				<h2>
 					<span>Sửa hoa</span>
@@ -74,7 +74,6 @@
 						<div>
 							<label>Loại hoa</label>
 							<select class="input-short" name="loaihoa">
-								<option value="123">123</option>
 							</select>
 						</div>
 						<div>
