--- a/client/PageNotFound.html
+++ b/client/PageNotFound.html
@@ -15,7 +15,7 @@
 			<div class="container_12">
 				<div class="grid_4">
 					<ul class="user-pro">
-						<li><a href="login.html">Login</a></li>
+						<li><a href="">Login</a></li>
 					</ul>
 				</div>
 			</div>
@@ -30,7 +30,7 @@
 							<li><a href="">Trang chủ</a></li>
 							<li><a href="">Mua hoa</a></li>
 							<li><a href="">Thêm danh mục</a></li>
-							<li><a href="">Xem danh sách</a></li>
+							<li><a href="list.html">Xem danh sách</a></li>
 						</ul>
 					</div>
 				</div>
@@ -57,59 +57,7 @@
 	</div>
 
 	<div class="container_12">
-		<div class="bottom-spacing">
-			<div class="float-left">
-				<a href="add.html" class="button">
-					<span>Thêm sản phẩm mới
-						<img src="images/plus-small.gif" alt="Thêm tin mới">
-					</span>
-				</a>
-			</div>
-			<div class="clear"></div>
-		</div>
-
-		<div class="grid_12">
-			<div class="module">
-
-				<h2>
-					<span>Danh sách hoa</span>
-				</h2>
-				<div class="module-table-body">
-					<table id="myTable" class="tablesorter">
-						<thead>
-							<tr>
-								<th style="width: 4%; text-align: center;">ID</th>
-								<th style="width: 20%">Tên hoa</th>
-								<th style="width: 20%">Loại hoa</th>
-								<th style="width: 10%">Số lượng</th>
-								<th style="width: 10%">Giá bán</th>
-								<th style="width: 20%; text-align: center;">Hình ảnh</th>
-								<th style="width: 11%; text-align: center;">Chức năng</th>
-							</tr>
-						</thead>
-						<tbody id="body">
-						</tbody>
-					</table>
-				</div>
-
-			</div>
-
-			<div class="pagination">
-				<div class="numbers">
-					<span>Page:</span>
-					<a href="">1</a> <span>|</span>
-					<a href="">2</a> <span>|</span>
-					<span class="current">3</span> <span>|</span>
-					<a href="">4</a> <span>|</span>
-					<a href="">5</a> <span>|</span>
-					<a href="">6</a> <span>|</span>
-					<a href="">7</a> <span>|</span>
-					<span>...</span> <span>|</span>
-					<a href="">99</a>
-				</div>
-				<div style="clear: both;"></div>
-			</div>
-		</div>
+		<p style="color: red">Trang không tồn tại!</p>
 	</div>
 	<div style="clear: both;"></div>
 
@@ -122,8 +70,6 @@
 		</div>
 		<div style="clear:both;"></div>
 	</div>
-	<script src="lib/axios.min.js"></script>
-	<script src="js/list.js"></script>
 </body>
 
 </html>
