--- a/client/list.html
+++ b/client/list.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Mua hoa</title>
+	<title>Shop hoa</title>
 	<link rel="icon" type="image/png" href="images/icon.jpg" />
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
@@ -27,10 +27,10 @@
 				<div class="grid_12">
 					<div id="logo">
 						<ul id="nav">
-							<li><a href="">Trang chủ</a></li>
+							<li><a href="index.html">Trang chủ</a></li>
 							<li><a href="">Mua hoa</a></li>
 							<li><a href="">Thêm danh mục</a></li>
-							<li><a href="">Xem danh sách</a></li>
+							<li><a href="list.html">Xem danh sách</a></li>
 						</ul>
 					</div>
 				</div>
