--- a/client/login.html
+++ b/client/login.html
@@ -14,9 +14,9 @@
 		<div class="w3agile-border">
 			<h2>Login Form | VinaEnter Edu</h2>
 			<div class="login-main login-agileits">
-				<p style="color: red; background-color: yellow; font-weight: bold; font-style: italic">123</p>
+				<p style="display: none;" id="error"></p>
 				<h1>Login</h1>
-				<form method="post">
+				<form id="login-form" method="post">
 					<p>Username (*)</p>
 					<input type="text" placeholder="example@gmail.com" name="username" value="" />
 					<p>Password (*)</p>
@@ -27,6 +27,8 @@
 			</div>
 		</div>
 	</div>
+	<script src="lib/axios.min.js"></script>
+	<script src="js/login.js"></script>
 </body>
 
 </html>
