--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 			<div class="container_12">
 				<div class="grid_4">
 					<ul class="user-pro">
-						<li><a href="">Login</a></li>
+						<li><a href="login.html">Login</a></li>
 					</ul>
 				</div>
 			</div>
