--- a/client/list.html
+++ b/client/list.html
@@ -16,6 +16,7 @@
 				<div class="grid_4">
 					<ul class="user-pro">
 						<li><a href="login.html">Login</a></li>
+						<li><a href="javascript: void(0)" onclick="onLogout()">Logout</a></li>
 					</ul>
 				</div>
 			</div>
