--- a/client/add.html
+++ b/client/add.html
@@ -95,7 +95,7 @@
 							<input type="file" name="hinhanh" />
 						</div>
 						<fieldset>
-							<input class="submit-green" type="submit" value="Mua hoa" />
+							<input class="submit-green" type="submit" value="Thêm hoa" />
 							<input class="submit-gray" type="reset" value="Nhập lại" />
 						</fieldset>
 					</form>
