--- a/add.html
+++ b/add.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>VinaEnter EDU - Đã học là làm được</title>
-    <meta name="description" content="Thiet ke website, dao tap lap trinh">
-    <meta name="keywords" content="thiet ke website, dao tap lap trinh">
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -31,7 +29,7 @@
                 <div class="grid_12">
                     <div id="logo">
                         <ul id="nav">
-                            <li id="current"><a href="">Quản trị</a></li>
+                            <li id="current"><a href="index.html">Quản trị</a></li>
                             <li><a href="">Tài khoản</a></li>
                         </ul>
                     </div><!-- End. #Logo -->
@@ -63,7 +61,7 @@
         <div class="grid_12">
 
             <div class="module">
-                <h2><span>Thêm tin tức</span></h2>
+                <h2><span>Thêm hoa</span></h2>
 
                 <div class="module-body">
                     <form action="">
@@ -73,13 +71,14 @@
                         </div>
 
                         <p>
-                            <label>Thêm tin</label>
+                            <label>Tên hoa</label>
                             <input type="text" class="input-medium" />
                         </p>
 
                         <p>
-                            <label>Danh mục tin</label>
+                            <label>Loại hoa</label>
                             <select class="input-short">
+                                <option value="">-- Chọn loại hoa --</option>
                                 <option value="1">Option 1</option>
                                 <option value="2">Option 2</option>
                                 <option value="3">Option 3</option>
@@ -104,7 +103,7 @@
                         </p>
 
                         <fieldset>
-                            <input class="submit-green" type="submit" value="Thêm tin" />
+                            <input class="submit-green" type="submit" value="Thêm hoa" />
                             <input class="submit-gray" type="submit" value="Nhập lại" />
                         </fieldset>
                     </form>
