--- a/list.html
+++ b/list.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>VinaEnter EDU - Đã học là làm được</title>
-    <meta name="description" content="Thiet ke website, dao tap lap trinh">
-    <meta name="keywords" content="thiet ke website, dao tap lap trinh">
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -31,7 +29,7 @@
                 <div class="grid_12">
                     <div id="logo">
                         <ul id="nav">
-                            <li id="current"><a href="">Quản trị</a></li>
+                            <li id="current"><a href="index.html">Quản trị</a></li>
                             <li><a href="">Tài khoản</a></li>
                         </ul>
                     </div><!-- End. #Logo -->
@@ -62,7 +60,7 @@
             <!-- Button -->
             <div class="float-left">
                 <a href="add.html" class="button">
-                    <span>Thêm sản phẩm mới <img src="images/plus-small.gif" alt="Thêm tin mới"></span>
+                    <span>Thêm hoa mới <img src="images/plus-small.gif" alt="Thêm hoa mới"></span>
                 </a>
             </div>
             <div class="clear"></div>
@@ -71,7 +69,7 @@
         <div class="grid_12">
             <!-- Example table -->
             <div class="module">
-                <h2><span>Danh sách tin tức</span></h2>
+                <h2><span>Danh sách hoa</span></h2>
 
                 <div class="module-table-body">
                     <form action="">
@@ -79,7 +77,7 @@
                             <thead>
                                 <tr>
                                     <th style="width:4%; text-align: center;">ID</th>
-                                    <th>Tên tin</th>
+                                    <th>Tên hoa</th>
                                     <th style="width:20%">Loại hoa</th>
                                     <th style="width:16%; text-align: center;">Hình ảnh</th>
                                     <th style="width:11%; text-align: center;">Chức năng</th>
