--- a/client/list.html
+++ b/client/list.html
@@ -67,8 +67,13 @@
         </div>
 
         <div class="grid_12">
+            <p style="display: none;" id="error"></p>
+
             <!-- Example table -->
             <div class="module">
+                <div id="msg" style="display: none;">
+                    <span class="notification n-success">Thêm thành công</span>
+                </div>
                 <h2><span>Danh sách hoa</span></h2>
 
                 <div class="module-table-body">
@@ -83,64 +88,7 @@
                                     <th style="width:11%; text-align: center;">Chức năng</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="align-center">1</td>
-                                    <td><a href="">Hoa Phong Lan</a></td>
-                                    <td>Khai trương</td>
-                                    <td align="center"><img src="images/tmp/hoa1.jpg" class="hoa" /></td>
-                                    <td align="center">
-                                        <a href="">Sửa <img src="images/pencil.gif" alt="edit" /></a>
-                                        <a href="">Xóa <img src="images/bin.gif" width="16" height="16"
-                                                alt="delete" /></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="align-center">2</td>
-                                    <td><a href="">Hoa Tỉ muội</a></td>
-                                    <td>Khai trương</td>
-                                    <td align="center"><img src="images/tmp/hoa2.jpg" class="hoa" /></td>
-                                    <td align="center">
-                                        <a href="">Sửa <img src="images/pencil.gif" alt="edit" /></a>
-                                        <a href="">Xóa <img src="images/bin.gif" width="16" height="16"
-                                                alt="delete" /></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="align-center">3</td>
-                                    <td><a href="">Hoa Violet</a></td>
-                                    <td>Hoa kỷ niệm</td>
-                                    <td align="center"><img src="images/tmp/hoa3.jpg" class="hoa" /></td>
-                                    <td align="center">
-                                        <a href="">Sửa <img src="images/pencil.gif" alt="edit" /></a>
-                                        <a href="">Xóa <img src="images/bin.gif" width="16" height="16"
-                                                alt="delete" /></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="align-center">4</td>
-                                    <td><a href="">Hoa thủy tiên</a></td>
-                                    <td>Hoa tình yêu</td>
-                                    <td align="center"><img src="images/tmp/hoa4.jpg" class="hoa" /></td>
-                                    <td align="center">
-                                        <a href="">Sửa <img src="images/pencil.gif" alt="edit" /></a>
-                                        <a href="">Xóa <img src="images/bin.gif" width="16" height="16"
-                                                alt="delete" /></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="align-center">5</td>
-                                    <td><a href="">Hoa cẩm chướng</a></td>
-                                    <td>Hoa hạnh phúc</td>
-                                    <td align="center"><img src="images/tmp/hoa5.jpg" class="hoa" /></td>
-                                    <td align="center">
-                                        <a href="">Sửa <img src="images/pencil.gif" alt="edit" /></a>
-                                        <a href="">Xóa <img src="images/bin.gif" width="16" height="16"
-                                                alt="delete" /></a>
-                                    </td>
-                                </tr>
-
-                            </tbody>
+                            <tbody id="body"></tbody>
                         </table>
                     </form>
                 </div> <!-- End .module-table-body -->
@@ -186,6 +134,9 @@
         </div>
         <div style="clear:both;"></div>
     </div> <!-- End #footer -->
+
+    <script src="lib/axios.min.js"></script>
+    <script src="js/list.js"></script>
 </body>
 
 </html>
