--- a/list.html
+++ b/list.html
@@ -69,6 +69,9 @@
         <div class="grid_12">
             <!-- Example table -->
             <div class="module">
+                <div>
+                    <span class="notification n-success">Thêm thành công</span>
+                </div>
                 <h2><span>Danh sách hoa</span></h2>
 
                 <div class="module-table-body">
