--- a/add.html
+++ b/add.html
@@ -89,7 +89,7 @@
 
                         <fieldset>
                             <input class="submit-green" type="submit" value="Thêm hoa" />
-                            <input class="submit-gray" type="submit" value="Nhập lại" />
+                            <input class="submit-gray" type="reset" value="Nhập lại" />
                         </fieldset>
                     </form>
                 </div> <!-- End .module-body -->
