--- a/client/edit.html
+++ b/client/edit.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>VinaEnter EDU - Đã học là làm được</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <script src="lib/jquery-3.6.3.min.js"></script>
 </head>
 
 <body>
