--- a/client/list.html
+++ b/client/list.html
@@ -11,49 +11,7 @@
 <body>
     <!-- Header -->
     <div id="header">
-        <!-- Header. Status part -->
-        <div id="header-status">
-            <div class="container_12">
-                <div class="grid_4">
-                    <ul class="user-pro">
-                        <li>Chào, <a href="">admin</a></li>
-                        <li><a href="">Logout</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div style="clear:both;"></div>
-        </div> <!-- End #header-status -->
 
-        <!-- Header. Main part -->
-        <div id="header-main">
-            <div class="container_12">
-                <div class="grid_12">
-                    <div id="logo">
-                        <ul id="nav">
-                            <li id="current"><a href="index.html">Quản trị</a></li>
-                            <li><a href="">Tài khoản</a></li>
-                        </ul>
-                    </div><!-- End. #Logo -->
-                </div><!-- End. .grid_12-->
-                <div style="clear: both;"></div>
-            </div><!-- End. .container_12 -->
-        </div> <!-- End #header-main -->
-        <div style="clear: both;"></div>
-        <!-- Sub navigation -->
-        <div id="subnav">
-            <div class="container_12">
-                <div class="grid_12">
-                    <ul>
-                        <li><a href="list.html">sản phẩm</a></li>
-                        <li><a href="list.html">Danh mục sản phẩm</a></li>
-                        <li><a href="add.html">Giới thiệu</a></li>
-                        <li><a href="list.html">Đơn hàng</a></li>
-                        <li><a href="list.html">Liên hệ</a></li>
-                    </ul>
-                </div><!-- End. .grid_12-->
-            </div><!-- End. .container_12 -->
-            <div style="clear: both;"></div>
-        </div> <!-- End #subnav -->
     </div> <!-- End #header -->
 
     <div class="container_12">
@@ -127,15 +85,14 @@
 
     <!-- Footer -->
     <div id="footer">
-        <div class="container_12">
-            <div class="grid_12">
-                <p>Copyright &copy; 2013. <a href="http://vinaenter.edu.vn" title="Đã học là làm được">VinaEnter
-                        EDU</a></p>
-            </div>
-        </div>
-        <div style="clear:both;"></div>
-    </div> <!-- End #footer -->
 
+    </div> <!-- End #footer -->
+    <script>
+        $(document).ready(function () {
+            $("#header").load("./inc/header.html");
+            $("#footer").load("./inc/footer.html");
+        });
+    </script>
     <script src="lib/axios.min.js"></script>
     <script src="js/list.js"></script>
 </body>
